--- a/tox.ini
+++ b/tox.ini
@@ -1,99 +1,25 @@
 [tox]
-minversion=1.6.7
 envlist =
-    py26-1.6,
-    py27-1.6,
-    py27-1.7,
-    py27-1.8,
-    py33-1.6,
-    py33-1.7,
-    py33-1.8,
-    py34-1.6,
-    py34-1.7,
-    py34-1.8,
-    pypy-1.6,
-    pypy-1.7,
-    pypy-1.8
+  py26-django16
+  py{27,33,34,pypy}-django{16,17,18}
+  py{27,34,35,36}-django{19,110,111}
+  py{35,36,37}-django{20,21} 
+  py{36,37,38}-django{22,30,master}
+
+skipsdist = true
 
 [testenv]
 commands =
-    python -B -tt -W ignore setup.py test
-
-[testenv:py26-1.6]
-basepython = python2.6
-usedevelop = True
-deps =
-    Django == 1.6.11
-    argparse == 1.1
-
-[testenv:py27-1.6]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.6.11
-
-[testenv:py27-1.7]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.7.7
-
-[testenv:py27-1.8]
-basepython = python2.7
-usedevelop = True
-deps =
-    Django == 1.8
-
-[testenv:py33-1.6]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.6.11
-
-[testenv:py33-1.7]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.7.7
-
-[testenv:py33-1.8]
-basepython = python3.3
-usedevelop = True
-deps =
-    Django == 1.8
-
-[testenv:py34-1.6]
-basepython = python3.4
-usedevelop = True
-deps =
-    Django == 1.6.11
-
-[testenv:py34-1.7]
-basepython = python3.4
-usedevelop = True
-deps =
-    Django == 1.7.7
-
-[testenv:py34-1.8]
-basepython = python3.4
-usedevelop = True
-deps =
-    Django == 1.8
-
-[testenv:pypy-1.6]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.6.11
-
-[testenv:pypy-1.7]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.7.7
-
-[testenv:pypy-1.8]
-basepython = pypy
-usedevelop = True
-deps =
-    Django == 1.8
+  python -B -tt -W ignore setup.py test
+deps=
+  django16: Django>=1.6,<1.7
+  django17: Django>=1.7,<1.8
+  django18: Django>=1.8,<1.9
+  django19: Django>=1.9,<1.10
+  django110: Django>=1.10,<1.11
+  django111: Django>=1.11,<2.0
+  django20: Django>=2.0,<2.1
+  django21: Django>=2.1,<2.2
+  django22: Django>=2.2,<3.0
+  django30: Django>=3.0,<3.1
+  djangomaster: https://github.com/django/django/archive/master.tar.gz
