Update Travis allow environments and allow failures on master, change name django-dynamic-allowedsites

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
   py26-django16
-  py{27,33,34,pypy}-django{16,17,18}
+  py{27,33,34}-django{16,17,18}
   py{27,34,35,36}-django{19,110,111}
   py{35,36,37}-django{20,21} 
   py{36,37,38}-django{22,30,master}
@@ -9,8 +9,11 @@ envlist =
 skipsdist = true
 
 [testenv]
-commands =
-  python -B -tt -W ignore setup.py test
+commands = python runtests.py
+envdir = {toxworkdir}/venvs/{envname}
+setenv =
+  PYTHONDONTWRITEBYTECODE=1
+  PYTHONWARNINGS=once
 deps=
   django16: Django>=1.6,<1.7
   django17: Django>=1.7,<1.8
@@ -23,3 +26,13 @@ deps=
   django22: Django>=2.2,<3.0
   django30: Django>=3.0,<3.1
   djangomaster: https://github.com/django/django/archive/master.tar.gz
+
+basepython =
+  py26: python2.6
+  py27: python2.7
+  py33: python3.3
+  py34: python3.4
+  py35: python3.5
+  py36: python3.6
+  py37: python3.7
+  py38: python3.8
